--- a/static/common/mod/alert/alert.css
+++ b/static/common/mod/alert/alert.css
@@ -1,1 +1,1 @@
-.ui-alert{font-size:14;text-align:center;padding:20px}.ui-alert-button-cancel,.ui-alert-button-cancel:hover{background:#ebebeb;color:#333}
+.ui-alert{font-size:14px;text-align:center;padding:20px}.ui-alert-button-cancel,.ui-alert-button-cancel:hover{background:#ebebeb;color:#333}
