--- a/static/common/mod/placeholder/placeholder.css
+++ b/static/common/mod/placeholder/placeholder.css
@@ -1,1 +1,1 @@
-.ui-placeholder{position:absolute;font-size:12px;color:#ccc}
+.ui-placeholder{position:absolute!important;font-size:12px!important;color:#aaa!important;border:0!important;padding:0!important;margin:0!important;text-indent:5px!important}
